@@ -15,3 +15,4 @@ requires:
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
 license: perl
+license: perl
